Feat/#58: Integrity of DTOs used by API (#100)
* #58: [WIP] Add integrity on API

* feat(#58): Add integrity on API endpoints

* Update of code after merge

* Fix failing tests
