# back/src/main/java/com/ynov/capuches/opale/controllers/AdventurerController.java
@@ -3,11 +3,12 @@ package com.ynov.capuches.opale.controllers;
 
 import com.ynov.capuches.opale.exceptions.NotFoundException;
 import com.ynov.capuches.opale.model.AdventurerCreationDTO;
-import com.ynov.capuches.opale.model.AdventurerDTO;
+import com.ynov.capuches.opale.model.AdventurerResponseDTO;
 import com.ynov.capuches.opale.model.AdventurerUpdateDTO;
 import com.ynov.capuches.opale.openapi.api.AdventurerApiDelegate;
 import com.ynov.capuches.opale.services.AdventurerService;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.coyote.BadRequestException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
@@ -24,13 +25,18 @@ public class AdventurerController implements AdventurerApiDelegate {
     }
 
     @Override
-    public ResponseEntity<AdventurerDTO> createAdventurer(AdventurerCreationDTO adventurerCreationDTO) {
-        return ResponseEntity.status(HttpStatus.CREATED).body(adventurerService.createAdventurer(adventurerCreationDTO));
+    public ResponseEntity<AdventurerResponseDTO> createAdventurer(AdventurerCreationDTO adventurerCreationDTO) {
+        try {
+            return ResponseEntity.status(HttpStatus.CREATED).body(adventurerService.createAdventurer(adventurerCreationDTO));
+        } catch (BadRequestException e) {
+            log.error(e.getMessage(), e);
+            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
+        }
     }
 
     @Override
-    public ResponseEntity<AdventurerDTO> getAdventurerById(Long id) {
-        AdventurerDTO adventurerDTO = adventurerService.getOneAdventurer(id);
+    public ResponseEntity<AdventurerResponseDTO> getAdventurerById(Long id) {
+        AdventurerResponseDTO adventurerDTO = adventurerService.getOneAdventurer(id);
         if (adventurerDTO != null) {
             return ResponseEntity.status(HttpStatus.OK).body(adventurerDTO);
         }
@@ -38,12 +44,12 @@ public class AdventurerController implements AdventurerApiDelegate {
     }
 
     @Override
-    public ResponseEntity<List<AdventurerDTO>> getAdventurers() {
+    public ResponseEntity<List<AdventurerResponseDTO>> getAdventurers() {
         return new ResponseEntity<>(adventurerService.getAllAdventurers(), HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<AdventurerDTO> updateAdventurer(Long id, AdventurerUpdateDTO adventurerUpdateDTO) {
+    public ResponseEntity<AdventurerResponseDTO> updateAdventurer(Long id, AdventurerUpdateDTO adventurerUpdateDTO) {
         try {
             return new ResponseEntity<>(adventurerService.updateAdventurer(id, adventurerUpdateDTO), HttpStatus.OK);
         } catch (Exception e) {
