# swagger-capuches-opale.yml
@@ -30,7 +30,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/AdventurerDTO'
+                  $ref: '#/components/schemas/AdventurerResponseDTO'
         '400':
           $ref: '#/components/responses/BadRequest'
         '500':
@@ -48,7 +48,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AdventurerDTO'
+                $ref: '#/components/schemas/AdventurerResponseDTO'
         '400':
           $ref: '#/components/responses/BadRequest'
         '500':
@@ -73,7 +73,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AdventurerDTO'
+                $ref: '#/components/schemas/AdventurerResponseDTO'
         '400':
           $ref: '#/components/responses/BadRequest'
         '404':
@@ -103,7 +103,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AdventurerDTO'
+                $ref: '#/components/schemas/AdventurerResponseDTO'
         '400':
           $ref: '#/components/responses/BadRequest'
         '404':
@@ -135,9 +135,9 @@ paths:
           schema:
             type: string
             properties:
-                status:
-                    type: string
-                    enum: [PENDING, REFUSED, ABANDONED, VALIDATED, FAILURE, SUCCESS]
+              status:
+                type: string
+                enum: [ PENDING, REFUSED, ABANDONED, VALIDATED, FAILURE, SUCCESS ]
         - in: query
           name: backerFilter
           schema:
@@ -205,13 +205,15 @@ components:
     ArchetypeEnum:
       description: Archetype of the adventurer (pre-defined list)
       type: string
-      enum: [DEATH_KNIGHT, DEMON_HUNTER, DRUID, EVOKER, HUNTER, MAGE, MONK, PALADIN, PRIEST, ROGUE, SHAMAN, WARLOCK, WARRIOR]
+      enum: [ DEATH_KNIGHT, DEMON_HUNTER, DRUID, EVOKER, HUNTER, MAGE, MONK, PALADIN, PRIEST, ROGUE, SHAMAN, WARLOCK, WARRIOR ]
     AdventurerCommonProperties:
       description: Common properties of adventurer related DTOs
       properties:
         name:
           description: Name of the adventurer
           type: string
+          minLength: 5
+          maxLength: 100
         archetype:
           $ref: '#/components/schemas/ArchetypeEnum'
     AdventurerCreationDTO:
@@ -227,6 +229,7 @@ components:
             initialDailyRate:
               type: number
               format: double
+              minimum: 1
     AdventurerUpdateDTO:
       description: DTO used to update an existing adventurer
       allOf:
@@ -237,7 +240,8 @@ components:
               description: Professional experience of the adventurer
               type: integer
               format: int64
-    AdventurerDTO:
+              minimum: 1
+    AdventurerResponseDTO:
       description: Representation of an adventurer
       allOf:
         - $ref: '#/components/schemas/AdventurerCommonProperties'
@@ -254,26 +258,33 @@ components:
               type: number
               format: double
     RequestDTO:
-      description: Representation of a request
+      description: Representation of a mission request
       properties:
         id:
           type: integer
           format: int64
         title:
           type: string
+          minLength: 10
+          maxLength: 30
         description:
           type: string
+          minLength: 100
         bounty:
           type: number
           format: double
+          minimum: 1
         status:
           type: string
-          enum: [PENDING, REFUSED, ABANDONED, VALIDATED, FAILURE, SUCCESS]
+          enum: [ PENDING, REFUSED, ABANDONED, VALIDATED, FAILURE, SUCCESS ]
         dueDate:
+          description: Due date of the mission, should be equal or later than today + estimated duration
           type: string
           format: date
         backer:
           type: string
+          minLength: 5
+          maxLength: 100
         estimatedDuration:
           type: integer
           format: int32
